# ValidatorRemoteWallet

./: .gitignore  BUILD.bazel  README.md  WORKSPACE
example/client/: BUILD.bazel  main.go
example/server/: BUILD.bazel  main.go  server.go
wallet/v1alpha1/: BUILD.bazel  RemoteWallet.pb.go  RemoteWallet.proto
