load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        "server.go"
    ],
    importpath = "github.com/alonmuroch/validatorremotewallet/example/server",
    visibility = ["//visibility:public"],
    deps = [
        "//wallet/v1alpha1:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@com_github_urfave_cli//:go_default_library"
    ],
)

go_binary(
    name = "server",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
