load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        "server.go"
    ],
    importpath = "github.com/alonmuroch/validatorremotewallet/example/server",
    visibility = ["//visibility:public"],
    deps = [
        "//wallet/v1alpha1:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@com_github_urfave_cli//:go_default_library",
        "@com_github_wealdtech_go_eth2_wallet//:go_default_library",
        "@com_github_wealdtech_go_eth2_wallet_store_filesystem//:go_default_library",
        "@com_github_wealdtech_go_eth2_wallet_types//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_wealdtech_go_bytesutil//:go_default_library",
        "@com_github_prysmaticlabs_go_ssz//:go_default_library",
    ],
)

go_binary(
    name = "server",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
