load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "eth_proto",
    srcs = ["RemoteWallet.proto"],
    visibility = ["//visibility:public"],
    deps = ["@go_googleapis//google/api:annotations_proto"],
)

go_proto_library(
    name = "eth_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "wallet/v1alpha1",
    proto = ":eth_proto",
    visibility = ["//visibility:public"],
    deps = ["@go_googleapis//google/api:annotations_go_proto"],
)

go_library(
    name = "go_default_library",
    embed = [":eth_go_proto"],
    importpath = "wallet/v1alpha1",
    visibility = ["//visibility:public"],
    deps = [
            "@com_github_golang_protobuf//proto:go_default_library",
            "@go_googleapis//google/api:annotations_go_proto",
            "@org_golang_google_grpc//:go_default_library",
            "@org_golang_google_grpc//codes:go_default_library",
            "@org_golang_google_grpc//status:go_default_library",
    ],
)
