#load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
#load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

go_library(
    name = "go_default_library",
    srcs = ["RemoteWallet.pb.go"],
    importpath = "github.com/alonmuroch/validatorremotewallet/wallet/v1alpha1",
    visibility = ["//visibility:public"],
    deps = [
#        "@com_github_golang_protobuf//proto:go_default_library",
        "@go_googleapis//google/api:annotations_go_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)
